button and gaps fixed

--- a/src/app/main/employees/employees-home/employees-home.component.scss
+++ b/src/app/main/employees/employees-home/employees-home.component.scss
@@ -1,30 +1,35 @@
+.o-column-collapsible>.o-container.mat-expansion-panel .mat-expansion-panel-header,
+  .o-row-collapsible>.o-container.mat-expansion-panel .mat-expansion-panel-header{
+  border: 0;
+}
+
 .collapsible{
 
-  .o-container.mat-expansion-panel .mat-expansion-panel-header, .o-row-collapsible > .o-container.mat-expansion-panel .mat-expansion-panel-header{
-    border: 0;
+  .o-container{
+    .o-container-title.mat-expansion-panel-header-title,
+      .o-row-collapsible>.o-container .o-container-title.mat-expansion-panel-header-title {
+        border:solid;
+        border-width: 1px;
+        border-radius: 5%;
+        justify-content: center;
+    }
+    .mat-expansion-panel-header-description,
+      .mat-expansion-panel-header-title{
+        flex-grow: 0;
+    }
   }
 
   mat-panel-title mat-icon{
-    padding-left: 18px;
-    padding-top: 11px;
-    padding-right: 10px;
+    padding-left: 15px;
+    padding-top: 4px;
+    padding-right: 6px;
     height: 32px;
-    border-style: solid;
-    border-width: 1px;
-    border-top-left-radius: 10%;
-    border-bottom-left-radius: 10%;
-    border-right: 0;
   }
 
   mat-panel-title span{
-    padding-top: 11px;
-    height: 32px;
-    width: 145px;
-    border-style: solid;
-    border-width: 1px;
-    border-left: 0;
-    border-top-right-radius: 5%;
-    border-bottom-right-radius: 5%;
+    padding-top: 5px;
+    height: 26px;
+    width: 140px;
   }
 
   mat-expansion-panel-header{
