--- a/src/app/main/employees/employees.theme.scss
+++ b/src/app/main/employees/employees.theme.scss
@@ -1,4 +1,5 @@
 @import 'node_modules/@angular/material/theming';
+
 @mixin employees-theme($theme) {
   $accent: map-get($theme, accent);
   $emp-icon-color: #b8b8b8;
@@ -15,17 +16,16 @@
         background-color: mat-color($accent);
       }
     }
-    .collapsible{
-    .filter_style{
-      border-color: mat-color($accent);
+
+    .collapsible {
+      .filter_style {
+        border-color: mat-color($accent);
+      }
+    .o-container .o-container-title.mat-expansion-panel-header-title,
+      .o-container .o-row-collapsible>.o-container .o-container-title.mat-expansion-panel-header-title{
+        border-color: $border-color;
+      }
     }
-    mat-panel-title mat-icon{
-      border-color: $border-color;
-    }
-    mat-panel-title span{
-      border-color: $border-color;
-    }
-  }
   }
 
   employees-detail {
